Feat: clean up imports and enhance type safety in WebSocket handler and user entity